--- a/Portafolio_ESJimenez/BackEnd/src/main/resources/application.properties
+++ b/Portafolio_ESJimenez/BackEnd/src/main/resources/application.properties
@@ -1,9 +1,15 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backendesjimenez?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendesjimenez?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update 
+spring.datasource.url=mysql://ux4ng0ifntcatyra:X7UqKUgLy3XeBS3X9Zr3@blvn76cmznzdlwvzfoaa-mysql.services.clever-cloud.com:3306/blvn76cmznzdlwvzfoaa
+spring.datasource.username=ux4ng0ifntcatyra
+spring.datasource.password=X7UqKUgLy3XeBS3X9Zr3
+
+
+  
 #JWT
 jwt.secret = secret
 jwt.expiration = 3600
